[package]
name = "rakdos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
strfmt = "0.2.4"
toml = "0.8.6"
ctrlc = "3.4.1"
nix = "0.27.1"